--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <slf4j.version>1.6.6</slf4j.version>
-        <logback.version>1.0.6</logback.version>
+        <slf4j.version>1.7.12</slf4j.version>
+        <logback.version>1.1.7</logback.version>
     </properties>
 
     <dependencies>
@@ -50,14 +50,14 @@
         <dependency>
             <groupId>org.apache.thrift</groupId>
             <artifactId>libfb303</artifactId>
-            <version>0.6.1</version>
+            <version>0.8.0</version>
         </dependency>
 
-        <dependency>
-            <groupId>scribe.thrift</groupId>
-            <artifactId>scribe</artifactId>
-            <version>1.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>scribe.thrift</groupId>-->
+            <!--<artifactId>scribe</artifactId>-->
+            <!--<version>1.0</version>-->
+        <!--</dependency>-->
     </dependencies>
 
     <repositories>
@@ -83,8 +83,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>2.3.2</version>
                     <configuration>
-                        <source>1.6</source>
-                        <target>1.6</target>
+                        <source>1.8</source>
+                        <target>1.8</target>
                         <verbose>true</verbose>
                         <encoding>UTF-8</encoding>
                     </configuration>
